# energy-anomaly

./: .env.example  .gitignore  README-draft.md  pyproject.toml
config/: sites.yaml
data/snapshot/: burgos_ph.parquet  esbjerg_dk.parquet  sevilla_es.parquet
src/energy_monitor/: __main__.py  agent.py  anomaly.py  clean.py  config.py  dashboard.py  generation.py  ingest.py  queries.py  store.py
tests/: test_agent.py  test_anomaly.py  test_clean.py  test_dashboard.py  test_generation.py  test_ingest.py  test_queries.py  test_smoke.py  test_store.py
