[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/energy_monitor"]

[project]
name = "energy-monitor"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"

dependencies = [
    "anthropic>=0.113.0",
    "dash>=4.3.0",
    "duckdb==1.5.4",
    "httpx>=0.28.1",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pyarrow>=24.0.0",
    "pydantic>=2.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
pythonVersion = "3.13"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
